word-wraps code tags to prevent scrolling

--- a/contents/style.scss
+++ b/contents/style.scss
@@ -45,6 +45,7 @@ p {
 
 code {
   background-color: #fff;
+  word-wrap: break-word;
 }
 
 .hero {
